--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "sbt-webpack",
   "version": "0.0.1",
-  "description": "",
-  "private": true,
+  "description": "An SBT-web plugin for intefrating webpack",
   "repository": {
     "type": "git",
     "url": "git://github.com/HomeBay/sbt-webpack.git"
   },
   "author": "Joe Zulli",
-  "license": "",
+  "licenses": [
+    {
+      "type": "Apache License Version 2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0"
+    }
+  ],
   "bugs": {
     "url": "https://github.com/HomeBay/sbt-webpack/issues"
   },
   "dependencies": {
-    "jsx-loader": "^0.12.2",
-    "webpack": "^1.5.3"
-  },
-  "devDependencies": {
     "jsx-loader": "^0.12.2",
     "webpack": "^1.5.3"
   }
